# port_scanner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Youtube_down.py  config.py  database.db  dict_генерсловарей.py  for_range.py  main.py  open_ports.db  port_scanner.py  pyproject.toml  requirements-dev.txt  requirements.txt  speedtestcli.py  test_scanner.py  while.py
.github/workflows/: checks.yml
database/: database.py  db.py
newpack/: file2.py
src/: port_scanner.py
