[project]
name = "port_scanner"
version = "0.1.0"
description = "port scanner"
requires-python = ">=3.13"
dependencies = [
]

[tool.setuptools]
packages = ["app", "config", "locales", "migrations"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs  | \.git  | \.venv  | venv  | env  | build  | dist  | \.postgres_data  | __pycache__)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["."]
skip_glob = [
    "*/.venv/*",
    "*/venv/*",
    "*/env/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*"
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
strict_optional = false
ignore_missing_imports = true
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^venv/",
    "^env/",
    "^__pycache__/",
]

[tool.flake8]
max-line-length = 90
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E501",  # line too long (handled by black)
]
extend-select = ["E", "W", "F"]
per-file-ignores = [
    "__init__.py:F401",
    "test_*.py:D",
    "tests/*:D",
    "*_test.py:D",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
max-complexity = 10
